[package]
name = "serde_syntax"
version = "0.1.0"
authors = ["KaleBBuR <kalebbryceburrow2018.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"